--- a/templates/components/dashboard/chat/chat.html.twig
+++ b/templates/components/dashboard/chat/chat.html.twig
@@ -1,24 +1,47 @@
-<div class="flex flex-col border-custom-dark-100 bg-custom-dark-200 p-5 overflow-hidden rounded-xl border-1">
-    <div>
-        {{ info.title }}
-        {{ info.user.name }}
-        {{ info.updatedAt|date('d/m/Y H:i') }}
+<div class="flex flex-col border-custom-dark-100 bg-custom-dark-200 p-5 rounded-xl border-1">
+    <div class="flex flex-row justify-between mb-5">
+        <p class="font-semibold">
+            {{ 'chat.owner'|trans({'%name%': info.user.name}) }}
+        </p>
+        <p class="font-semibold">
+            {{ 'chat.updated_at'|trans({'%date%': info.updatedAt|date('d/m/Y H:i')}) }}
+        </p>
     </div>
 
-    <div class="p-12">
+    <div class="flex flex-col gap-5 p-12 max-h-146 bg-custom-dark-300 rounded-xl overflow-scroll">
+        {% embed 'components/dashboard/chat/message.html.twig' with {
+            user: info.user.id
+        } %}
+            {% block values %}
+                {{ info.content|raw }}
+            {% endblock %}
+        {% endembed %}
+
         {% for value in values %}
-            <div class="border-custom-dark-100 {{ app.user.id == value.user.id ? 'bg-custom-blue-100' : 'bg-custom-dark-300' }} border-t p-5 rounded-xl">
-                {% block values %}{% endblock %}
-            </div>
+            {% embed 'components/dashboard/chat/message.html.twig' with {
+                user: value.user.id
+            } %}
+                {% block values %}
+                    {{ value.content|raw }}
+                {% endblock %}
+            {% endembed %}
         {% endfor %}
     </div>
 
-    <form class="flex items-center w-full gap-12">
-        <textarea id="message" name="message" rows="1" cols="50" aria-label="{{ ''|trans() }}" placeholder="{{ ''|trans() }}" class="w-[80%]"></textarea>
 
-        <button type="submit" class="my-5 cursor-pointer rounded-xl p-3 text-xl bg-custom-orange-200 hover:bg-custom-orange-100 transition">
-            {{ submit|default('Envoyer') }}
-        </button>
-    </form>
+    {{ form_errors(form) }}
 
+    {{ form_start(form, { attr: { class: "grid gap-4"}}) }}
+
+        <div class="flex justify-center items-center gap-12 mt-5 w-full">
+            {% block form %}
+            {% endblock %}
+
+            <button type="submit" class="flex items-center my-5 cursor-pointer rounded-xl p-3 text-xl font-semibold bg-custom-orange-200 hover:bg-custom-orange-100 transition">
+                {{ submit|default('Envoyer') }}
+                <i class="bxs-send-alt ml-3"></i>
+            </button>
+        </div>
+
+    {{ form_end(form) }}
 </div>
