--- a/templates/components/dashboard/pagination.html.twig
+++ b/templates/components/dashboard/pagination.html.twig
@@ -1,4 +1,4 @@
-<div class="mt-5 mb-12 flex w-full flex-row justify-between">
+<div class="mt-5 mb-12 flex w-full flex-col sm:flex-row justify-between gap-5">
     {% set firstPage = 1 %}
     {% set totalPage = (total / 10)|round(0, 'ceil') %}
 
