--- a/templates/profile-base.html.twig
+++ b/templates/profile-base.html.twig
@@ -75,7 +75,7 @@
                 <div class="flex items-center">
                     <i class="text-xl bxs-bell"></i>
                 </div>
-                <a href="{{ path('app_user_home') }}">
+                <a href="{{ path('app_user_settings') }}">
                     <div class="flex items-center p-2 rounded-lg hover:bg-custom-dark-400 transition">
                         <i class="text-4xl bxs-user-circle"></i>
                         <div class="ml-2">
