Fix responsive on chat

--- a/templates/admin/request/show.html.twig
+++ b/templates/admin/request/show.html.twig
@@ -23,7 +23,7 @@
         {% endblock %}
 
         {% block form %}
-            {{ form_row(form.content, { attr: { class: "w-full"}}) }}
+            {{ form_widget(form.content, { attr: { class: "w-full rounded-l-xl" } }) }}
         {% endblock %}
     {% endembed %}
 
