--- a/templates/components/form.html.twig
+++ b/templates/components/form.html.twig
@@ -17,7 +17,7 @@
             {% endblock %}
 
             <div class="flex justify-center">
-                <button type="submit" class="my-5 cursor-pointer rounded-xl p-3 text-xl w-[80%] bg-custom-orange-200 hover:bg-custom-orange-100 transition">
+                <button type="submit" name="_submit" class="my-5 cursor-pointer rounded-xl p-3 text-xl w-[80%] bg-custom-orange-200 hover:bg-custom-orange-100 transition">
                     {{ submit|default('Envoyer') }}
                 </button>
             </div>
