--- a/templates/user/home/index.html.twig
+++ b/templates/user/home/index.html.twig
@@ -8,13 +8,7 @@
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/var/www/src/Controller/HomeController.php</code></li>
-        <li>Your template at <code>/var/www/templates/home/index.html.twig</code></li>
-    </ul>
+<div id="welcome-message" class="example-wrapper">
+    <h1>Bonjour {{ app.user.name() }} !</h1>
 </div>
 {% endblock %}
